# OmnAIScope-DataServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe  data.cpp  data.hpp  vcpkg.json
.github/: workflows
.github/workflows/: build.yaml  build_for_pi.yaml
docs/FileFormats/: v1.0.0.md  v1.1.0.md  v1.1.1md  v1.2.0.md
src/: LibUsbDeviceManager.hpp  OmniscopeCommands.hpp  OmniscopeDevice.hpp  OmniscopeSampler.hpp  TypeDescriptor_OmniscopeCommands.hpp  data.cpp  data.cpp.orig  data.hpp  data.hpp.orig  plot.py  quality.py  sample.pb.cc  sample.pb.h  sample.proto  show.py
